Fixed collapse, broke modals

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -137,3 +137,9 @@ ol {
 /* Ease Display */
 
 .pad { padding: 25px; }
+
+.icon-bar {
+  color: #428bca;
+  background-color: #ffffff;
+
+}
